Додає шрифти, корегує деякі елементи

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="page">
+
+<body>
     <!-- Шапка сторінки -->
     <header>
        <nav>
-        <a href="/" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
         <ul>
             <li><a href="">Студія</a></li>
             <li><a href="">Портфоліо</a></li>
@@ -28,7 +32,7 @@
     <main>
     <!-- Герой -->
     <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
     </section>
     
@@ -87,7 +91,7 @@
 
 <!-- Футер -->
 <footer>
-    <a href="/">WebStudio</a>
+    <a href="./index.html" >WebStudio</a>
     <address>
         <ul>
             <li><a href="https://goo.gl/maps/xRm2VRqEnJcHHvkh7">м. Київ, пр-т Лесі Українки, 26</a></li>
