Додає CSS стилі хедера і футера в portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-     <!-- Шапка сторінки -->
-     <header>
-        <nav>
-         <a href="./portfolio.html" class="logo">WebStudio</a>
-         <ul>
-             <li><a href="">Студія</a></li>
-             <li><a href="">Портфоліо</a></li>
-             <li><a href="">Контакти</a></li>
-         </ul>
-        </nav>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-           </ul>
-        </header>
+<body>
+    <!-- Хедер -->
+    <header class="header">
+       <nav class="navigation">
+        <a class="logo" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+        <ul class="nav-list list">
+            <li class="nav-list-item"><a class="nav-list-link link" href="./index.html">Студія</a></li>
+            <li class="nav-list-item"><a class="nav-list-link current-page link" href="">Портфоліо</a></li>
+            <li class="nav-list-item"><a class="nav-list-link link" href="">Контакти</a></li>
+        </ul>
+       </nav>
+
+       <ul class="contact-list list">
+        <li><a class="link-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+       </ul>
+    </header>
 
         <main>
             <!-- Фільтр -->
@@ -75,16 +77,17 @@
             </section>
         </main>
 
-        <!-- Футер -->
-        <footer>
-            <a href="./portfolio.html">WebStudio</a>
-            <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/xRm2VRqEnJcHHvkh7">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
-        </footer>
+    <!-- Футер -->
+    <footer class="footer">
+       <a class="logo-footer logo" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+       <address class="address">
+        <ul class="address-list list">
+            <li class="address-list-item"><a class="footer-link-address link" href="https://goo.gl/maps/xRm2VRqEnJcHHvkh7">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="address-list-item"><a class="footer-link-mail link" href="mailto:info@example.com">info@example.com</a></li>
+            <li class="address-list-item"><a class="footer-link-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
+  
+    </footer>
 </body>
 </html>
